# open-aea

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pylintrc  .spelling  AUDIT.md  CLAUDE.md  CLEANUP.md  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pylintrc.local  pyproject.toml  pytest.ini  setup.cfg  setup.py  skaffold.yaml  strategy.ini  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: release.yml  snyk-security.yml  workflow.yml
.tmp-proposal/: chain_gas_fixes.md
aea/: __init__.py  __version__.py  abstract_agent.py  aea.py  aea_builder.py  agent.py  agent_loop.py  common.py  launcher.py  multiplexer.py  runner.py  runtime.py
aea/cli/: __init__.py  __main__.py  add.py  add_key.py  build.py  check_packages.py  config.py  core.py  create.py  delete.py  eject.py  fetch.py  fingerprint.py  generate.py  generate_all_protocols.py  generate_key.py  generate_wealth.py  get_address.py  get_multiaddress.py  get_public_key.py  init.py  install.py  ipfs_hash.py  issue_certificates.py  launch.py  list.py  local_registry_sync.py  login.py  packages.py  plugin.py  publish.py  push.py  push_all.py  register.py  remove.py  reset_password.py  run.py  scaffold.py  search.py  test.py  (+2 more)
aea/components/: base.py  loader.py  utils.py
aea/configurations/: __init__.py  base.py  constants.py  data_types.py  loader.py  manager.py  pypi.py  utils.py  validation.py
aea/connections/: base.py
aea/context/: __init__.py  base.py
aea/contracts/: base.py
aea/crypto/: __init__.py  base.py  helpers.py  ledger_apis.py  plugin.py  wallet.py
aea/customs/: __init__.py
aea/decision_maker/: __init__.py  base.py  default.py
aea/error_handler/: base.py  scaffold.py
aea/helpers/: __init__.py  async_friendly_queue.py  async_utils.py  base.py  cid.py  constants.py  dependency_tree.py  env_vars.py  exec_timeout.py  file_io.py  file_lock.py  fingerprint.py  http_requests.py  install_dependency.py  io.py  json_schema.py  logging.py  multiformat.py  multiformat_codecs.py  multiple_executor.py  pipe.py  profiling.py  protocols.py  secp256k1.py  serializers.py  win32.py  yaml_utils.py
aea/identity/: base.py
aea/mail/: __init__.py  base.py  base_pb2.py
aea/manager/: __init__.py  manager.py  project.py  utils.py
aea/package_manager/: base.py  v1.py
aea/protocols/: __init__.py  base.py
aea/registries/: __init__.py  base.py  filter.py  resources.py
aea/skills/: __init__.py  base.py  behaviours.py  tasks.py
aea/test_tools/: click_testing.py  constants.py  docker_image.py  generic.py  mocks.py  network.py  test_cases.py  test_contract.py  test_protocol.py  test_skill.py  utils.py
benchmark/: Dockerfile  README.md  benchmark-deployment.yaml  run_from_branch.sh
benchmark/cases/: cpu_burn.py  react_multi_agents_fake_connection.py  react_speed_in_loop.py  react_speed_multi_agents.py
benchmark/checks/: check_agent_construction_time.py  check_decision_maker.py  check_dialogues_memory_usage.py  check_mem_usage.py  check_messages_memory_usage.py  check_multiagent.py  check_multiagent_http_dialogues.py  check_proactive.py  check_reactive.py  utils.py
benchmark/framework/: aea_test_wrapper.py  benchmark.py  cli.py  executor.py  fake_connection.py  func_details.py  report_printer.py
deploy-image/: Dockerfile  README.md  build.sh
develop-image/: Dockerfile  Dockerfile_local  README.md  docker-env.sh
docs/: acn-internals.md  acn.md  aea-vs-mvc.md  aev-echo-demo.md  agent-oriented-development.md  agent-vs-aea.md  build-aea-programmatically.md  cli-commands.md  cli-how-to.md  config.md  connect-a-frontend.md  connection-resilience.md  connection.md  contract.md  core-components-1.md  core-components-2.md  creating-contracts.md  debug.md  decision-maker-transaction.md  decision-maker.md  dependency_graph_summary.md  deployment.md  development-setup.md  diagram.md  echo_demo.md  faq.md  generic-storage.md  glossary.md  gym-skill.md  http-connection-and-skill.md  http-echo-demo.md  interaction-protocol.md  ipfs_registry.md  ledger-integration.md  limits.md  logging.md  multi-agent-manager.md  multiplexer-standalone.md  overrides.md  p2p-connection.md  (+17 more)
docs-image/: Dockerfile
docs/api/: aea_builder.md
examples/aealite_go/: README.md
examples/gym_ex/: README.md  train.py
examples/protocol_specification_ex/: sample.yaml
examples/tac_deploy/: Dockerfile
mints/: whitelist.txt
p2p_libp2p_client/: connection.yaml
p2p_libp2p_mailbox/: connection.yaml
plugins/aea-ci-helpers/: MANIFEST.in  README.md  setup.py
plugins/aea-cli-benchmark/: MANIFEST.in  README.md  setup.py
plugins/aea-cli-ipfs/: MANIFEST.in  setup.py
plugins/aea-dev-helpers/: LICENSE  MANIFEST.in  README.md  setup.py
plugins/aea-ledger-cosmos/: MANIFEST.in  setup.py
plugins/aea-ledger-ethereum/: MANIFEST.in  setup.py
plugins/aea-ledger-ethereum-flashbots/: MANIFEST.in  setup.py
plugins/aea-ledger-ethereum-hwi/: MANIFEST.in  setup.py
plugins/aea-ledger-fetchai/: MANIFEST.in  setup.py
plugins/aea-ledger-solana/: .gitignore  MANIFEST.in  (+4 more)
scripts/: RELEASE_PROCESS.md  bump_aea_version.py  check_copyright_notice.py  check_dependencies.py  check_doc_ipfs_hashes.py  check_doc_links.py  check_imports_and_dependencies.py  check_ipfs_hashes_pushed.py  check_package_versions_in_docs.py  check_pipfile_and_toxini.py  check_pyproject_and_toxini.py  deploy_to_registry.py  freeze_dependencies.py  generate_all_protocols.py  generate_api_docs.py  generate_ipfs_hashes.py  generate_package_list.py  generate_release_announcement.py  install.ps1  install.sh  log_parser.py  parse_main_dependencies_from_lock.py  update_package_versions.py  update_plugin_versions.py  update_symlinks_cross_platform.py  whitelist.py
tests/: __init__.py  conftest.py  test_act_storage.py  test_aea.py  test_aea_builder.py  test_agent.py  test_agent_loop.py  test_exceptions.py  test_launcher.py  test_multiplexer.py  test_package_loading.py  test_runner.py  test_runtime.py  test_task.py
user-image/: Dockerfile  docker-env.sh  scripts
(+525 files in other folders)
