[tool.poetry]
name = "open-aea"
version = "2.1.0"
description = "Open AEA Framework"
authors = ["developer-valory <develope@valory.xyz>"]
license = "Apache-2.0"
packages = [{include = "aea"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.16"
# Core dependencies
packaging = ">=22.0,<27"
protobuf = ">=5,<7"
pyyaml = ">=6.0.1,<7"
requests = ">=2.20.0,<3"
pywin32 = {version = ">=304", markers = "sys_platform == 'win32'"}
# Optional deps for extras
click = {version = ">=8.1.0,<8.4.0", optional = true}
pytest = {version = ">=7.0,<10", optional = true}
coverage = {version = ">=6.4.4,<9", optional = true}

[tool.poetry.extras]
cli = ["click", "pyyaml", "packaging", "pytest", "coverage"]
test_tools = ["click", "pyyaml", "packaging", "pytest", "coverage"]
all = ["click", "pyyaml", "packaging", "pytest", "coverage"]

[tool.poetry.group.dev.dependencies]
setuptools = "==59.6.0"
aiohttp = ">=3.8.5,<4.0.0"
asn1crypto = ">=1.4.0,<1.5.0"
bech32 = "==1.2.0"
defusedxml = "==0.6.0"
docker = "==7.1.0"
ecdsa = ">=0.15"
eth-account = ">=0.13.0,<0.14.0"
hypothesis = "==6.151.9"
liccheck = "==0.6.0"
memory-profiler = "==0.57.0"
numpy = ">=1.18.1"
openapi-core = "==0.22.0"
openapi-spec-validator = ">=0.7.0,<0.8.0"
pexpect = "==4.8.0"
protobuf = ">=5,<7"
psutil = "==5.7.0"
pycryptodome = ">=3.10.1"
pytest-custom-exit-code = "==0.3.0"
GitPython = ">=3.1.37,<4.0.0"
idna = "<=3.3"
cosmpy = ">=0.11.0,<0.12"
web3 = ">=7.0.0,<8"
google-api-python-client = "<=2.60.0"
certifi = "<=2022.6.15.1"
mistune = "==2.0.3"
tomte = {version = "==0.6.4", extras = ["tox", "tests"]}
docspec = "==2.2.1"
docspec-python = "==2.2.1"
hexbytes = "==1.3.1"
ledgerwallet = "==0.1.3"
construct = "<=2.10.61"
werkzeug = "*"
pytest-asyncio = "*"
multidict = "*"
toml = "==0.10.2"
typer = "==0.16.0"

[tool.poetry.scripts]
aea = "aea.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
