[tool.poetry]
name = "open-aea"
version = "2.2.2"
description = "Open AEA Framework"
authors = ["developer-valory <develope@valory.xyz>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "aea"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
# Core dependencies
packaging = ">=22.0,<27"
protobuf = ">=5,<7"
pyyaml = ">=6.0.1,<7"
pywin32 = {version = ">=304", markers = "sys_platform == 'win32'"}
# Optional deps for extras
click = {version = ">=8.1.0,<8.4.0", optional = true}
pytest = {version = ">=7.0,<10", optional = true}
coverage = {version = ">=6.4.4,<9", optional = true}

[tool.poetry.extras]
cli = ["click", "pyyaml", "packaging", "pytest", "coverage"]
test_tools = ["click", "pyyaml", "packaging", "pytest", "coverage"]
all = ["click", "pyyaml", "packaging", "pytest", "coverage"]

[tool.poetry.group.dev.dependencies]
setuptools = "==59.6.0"
# Used by plugins (cosmos, ethereum, fetchai) at runtime and by tests;
# kept here as a dev dep so `poetry install` provisions it for development.
requests = ">=2.32.5,<3"
aiohttp = ">=3.8.5,<4.0.0"
asn1crypto = ">=1.4.0,<1.5.0"
bech32 = ">=1.2.0,<2"
defusedxml = "==0.6.0"
docker = "==7.1.0"
ecdsa = ">=0.19.2,<0.20"
eth-account = ">=0.13.0,<0.14.0"
hypothesis = "==6.151.9"
liccheck = "==0.6.0"
memory-profiler = "==0.57.0"
numpy = ">=1.18.1"
openapi-core = "==0.22.0"
openapi-spec-validator = ">=0.7.0,<0.8.0"
pexpect = "==4.8.0"
protobuf = ">=5,<7"
psutil = ">=5.7.0,<6.0.0"
pycryptodome = ">=3.10.1,<4.0.0"
pytest-custom-exit-code = "==0.3.0"
GitPython = ">=3.1.47,<4.0.0"
idna = "<=3.3"
cosmpy = ">=0.11.0,<0.12"
web3 = ">=7.0.0,<8"
google-api-python-client = "<=2.60.0"
certifi = "<=2022.6.15.1"
mistune = "==2.0.3"
tomte = { git = "https://github.com/valory-xyz/tomte.git", rev = "ff0ca24f3227e7a1e55f9a56f974e4d2ead88448", extras = ["tox", "tests"] }
docspec = "==2.2.1"
docspec-python = "==2.2.1"
hexbytes = "==1.3.1"
ledgerwallet = "==0.1.3"
werkzeug = "*"
pytest-asyncio = "*"
multidict = "*"
typer = "==0.16.0"

[tool.poetry.scripts]
aea = "aea.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# -- linter / pytest configs (folded from setup.cfg + pytest.ini per Wave 2a) -
#
# pytest.ini, setup.cfg, and .pylintrc removed in Wave 2a. Per-tool
# config now lives here (auto-discovered from pyproject.toml by the
# tools), with one exception: `[mypy]` + `[mypy-*]` blocks live in
# tox.ini per David's review on `valory-xyz/tomte#46` ("tox more
# expanded" model). The `[testenv:mypy]` command above passes
# `--config-file=tox.ini` so mypy picks them up.

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "integration: marks end-to-end tests which require the oef, soef, ledger or other network services",
    "unstable: marks test as unstable (won't be run in CI)",
    "ledger: marks tests which require ledger test networks (ethereum, cosmos, fetchai); these tests should also be marked 'integration'",
    "flaky: marks tests which are flaky and worth re-running",
    "sync: marks test for run in sync mode",
    "profiling: marks profiler tests that must be run separately to avoid garbage collector interferences",
]
filterwarnings = [
    "ignore:the imp module is deprecated in favour of importlib:DeprecationWarning",
    "ignore:Call to deprecated create function FileDescriptor().",
    "ignore:Call to deprecated create function Descriptor().",
    "ignore:Call to deprecated create function FieldDescriptor().",
    "ignore:Call to deprecated create function EnumValueDescriptor().",
    "ignore:Call to deprecated create function EnumDescriptor().",
    "ignore:The 'asyncio_mode' default value will change to 'strict' in future, please explicitly use 'asyncio_mode=strict' or 'asyncio_mode=auto' in pytest configuration file.",
    "ignore:There is no current event loop",
    "ignore::DeprecationWarning",
]

# Flake8 reads pyproject.toml only via the `Flake8-pyproject` plugin
# (already shipped under `tomte[flake8]`'s extras).
[tool.flake8]
paths = "aea,examples,packages,scripts,tests"
exclude = ".md,*_pb2.py,aea/__init__.py,aea/cli/__init__.py,tests/common/oef_search_pluto_scripts,tests/common/click_testing.py,scripts/oef/launch.py"
max-line-length = 88
select = "B,C,D,E,F,I,W"
# D400: First line should end with a period (ignored — too restrictive)
# D401: First line should be in imperative mood (ignored — too restrictive)
# E501: line-too-long (handled by black)
# E203: whitespace (clashes with black)
# W503: line-break (clashes with black)
# D202: blank lines
# B014: redundant exception
ignore = "E203,E501,W503,D202,B014,D400,D401,DAR,B028,B017,B042"
application-import-names = "aea,packages,tests,scripts"
per-file-ignores = [
    "tests/test_cli/test_upgrade.py:E800",
    "tests/test_protocols/test_generator/test_end_to_end.py:E800,F401",
    "tests/test_cli/test_launch_end_to_end.py:E800",
    "**/aea_ledger_cosmos/cosmos.py:F401",
    "**/aea_ledger_fetchai/_cosmos.py:F401",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
order_by_type = false
case_sensitive = true
lines_after_imports = -1
skip = ["tests/data/dummy_aea/vendor/", "tests/data/dummy_aea/skills/dummy"]
skip_glob = ["**/*_pb2.py"]
known_first_party = "aea"
known_packages = "packages"
known_local_folder = "tests"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "PACKAGES", "LOCALFOLDER"]

# Darglint config — darglint reads tox.ini / setup.cfg / .darglint, but
# not pyproject.toml. Settings live in tox.ini (`[darglint]` section)
# at the bottom of that file. Listed here as the canonical statement of
# intent; the tox.ini block is the source of truth.
# [tool.darglint]
# docstring_style = "sphinx"
# strictness = "short"
# ignore_regex = ".*_pb2\\.py"
# ignore = "DAR401"

[tool.pylint.master]
ignore-patterns = ["__main__.py", ".*_pb2.py", "tac.sh", "tac_local.sh"]

[tool.pylint."messages control"]
# Skips after C0209 are temporary
# C0103 invalid-name; C0201 consider-iterating-dictionary; C0301 line-too-long
# C0302 too-many-lines; W0105 pointless-string-statement; W0707 raise-missing-from
# W1202 logging-format-interpolation; W1203 logging-fstring-interpolation
# R0801 similar-lines; E1136 unsubscriptable-object; E0611 no-name-in-module
# C0209 consider-using-fstring; R1710 inconsistent-return-statements
# R1729 use-a-generator; C0206 consider-using-dict-items; W0237 arguments-renamed
# R1735 use-dict-literal; R1732 consider-using-with; W1514 unspecified-encoding
# R0402 consider-using-from-import; R1714 consider-using-in
# R1734 use-list-literal; W0640 cell-var-from-loop
# R1733 unnecessary-dict-index-lookup
disable = ["C0103", "C0201", "C0301", "C0302", "W0105", "W0707", "W1202", "W1203", "R0801", "E1136", "E0611", "C0209", "R1710", "R1729", "C0206", "W0237", "R1735", "R1732", "W1514", "R0402", "R1714", "R1734", "W0640", "R1733"]

[tool.pylint.imports]
# Per David's review on `valory-xyz/tomte#46`: this is OAEA's own
# library list, not tomte's. Tomte 0.7.0's canonical pylintrc carries
# zero downstream library names.
ignored-modules = ["bech32", "ecdsa", "lru", "eth_typing", "eth_keys", "eth_account", "ipfshttpclient", "werkzeug", "openapi_spec_validator", "aiohttp", "multidict", "yoti_python_sdk", "defusedxml", "fetch", "matplotlib", "memory_profiler", "numpy", "oef", "openapi_core", "psutil", "tensorflow", "temper", "skimage", "web3", "aioprometheus", "pyaes", "Crypto", "asn1crypto", "cosmpy", "google", "coverage", "pylint", "pytest", "gitpython", "protobuf", "docker", "signal", "anchorpy", "cryptography.fernet", "solana", "solders", "hexbytes", "toml"]

[tool.pylint.design]
min-public-methods = 1
max-public-methods = 36
max-returns = 10
max-bool-expr = 7
max-args = 27
max-locals = 31
max-statements = 80
max-parents = 11
max-branches = 24
max-attributes = 38

[tool.pylint.refactoring]
max-nested-blocks = 6
